# actuator_dynamic_on_gene

./: .gitignore
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: JointCmds.msg
src/joint_controller/: CMakeLists.txt  package.xml
src/joint_controller/launch/: joint_controller.launch.py
src/joint_controller/src/: joint_controller_node.cpp
src/joint_controller/src/IKSolver/: CMakeLists.txt  IKSolver.cpp  IKSolver.h
src/joint_planner/: CMakeLists.txt
src/joint_planner/launch/: joint_planner.launch.py
src/joint_planner/motion_files/: joint_states.csv  joint_states_eclipse_1.csv  joint_states_eclipse_2.csv
src/joint_planner/src/: joint_planner_node.cpp
src/joint_planner/src/ActuatorInterface/: ROSActuatorInterface.cpp
src/joint_planner/src/Planner/: Planner.cpp  Planner.h
src/joint_planner/src/StateMachine/: StateMachine.cpp  StateMachine.h
src/launch_scripts/launch/: test_all.launch.py
src/motor_driver/: CMakeLists.txt
src/motor_driver/launch/: motor_driver.launch.py
src/motor_driver/src/: Elmo_test_dc.cpp  Elmo_test_dc_originial.cpp  Humanoid_EtherCAT_DC.h  combine_test.cpp
src/ros2_xenomai_bridge/src/: motor_command_subscriber.cpp  motor_state_publisher.cpp
